--- a/newtab.html
+++ b/newtab.html
@@ -674,35 +674,39 @@
             }
 
             function renderIconSelector() {
-                // Build icon selector HTML
+                // --- Icon selector layout and style ---
                 return `
-                    <div id="iconSelector" style="margin-bottom:18px;">
-                        <div style="display:flex;gap:18px;">
-                            <div class="icon-choice" id="iconChoiceGoogle" style="position:relative;cursor:pointer;border-radius:10px;padding:8px 12px;display:flex;align-items:center;box-shadow:0 1px 4px #0004;background:${selectedIconType==='google'?'#333':'#222'};border:${selectedIconType==='google'?'2px solid #4af':'2px solid transparent'};">
+                    <fieldset id="iconSelectorFieldset" style="margin-bottom:18px;border:2px solid #444;border-radius:16px;padding:18px 18px 18px 18px;position:relative;">
+                        <legend style="padding:0 12px;font-size:1.1em;color:#aaa;font-weight:bold;background:#222;left:12px;">Icon</legend>
+                        <div style="display:flex;justify-content:center;gap:32px;margin-bottom:18px;">
+                            <div class="icon-choice" id="iconChoiceGoogle" style="position:relative;cursor:pointer;border-radius:12px;padding:14px 32px 14px 20px;display:flex;align-items:center;box-shadow:0 1px 4px #0004;background:${selectedIconType==='google'?'#333':'#222'};border:${selectedIconType==='google'?'2.5px solid #4af':'2px solid transparent'};min-width:120px;">
                                 <img src="${googleIconUrl}" id="iconPreviewGoogle" style="width:40px;height:40px;border-radius:8px;background:#222;object-fit:contain;">
-                                <span style="margin-left:10px;color:#fff;">Google</span>
-                                <span id="checkGoogle" style="position:absolute;top:4px;right:4px;${selectedIconType==='google'?'display:block':'display:none'};color:#4af;font-size:1.3em;">&#10003;</span>
+                                <span style="margin-left:16px;color:#fff;font-size:1.05em;">Google</span>
+                                <span id="checkGoogle" style="position:absolute;top:6px;right:10px;${selectedIconType==='google'?'display:block':'display:none'};">
+                                    <svg width="22" height="22" viewBox="0 0 24 24"><polyline points="5,13 10,18 19,7" style="fill:none;stroke:#1ec94c;stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                                </span>
                             </div>
-                            <div class="icon-choice" id="iconChoiceDuck" style="position:relative;cursor:pointer;border-radius:10px;padding:8px 12px;display:flex;align-items:center;box-shadow:0 1px 4px #0004;background:${selectedIconType==='duck'?'#333':'#222'};border:${selectedIconType==='duck'?'2px solid #4af':'2px solid transparent'};">
+                            <div class="icon-choice" id="iconChoiceDuck" style="position:relative;cursor:pointer;border-radius:12px;padding:14px 32px 14px 20px;display:flex;align-items:center;box-shadow:0 1px 4px #0004;background:${selectedIconType==='duck'?'#333':'#222'};border:${selectedIconType==='duck'?'2.5px solid #4af':'2px solid transparent'};min-width:120px;">
                                 <img src="${duckIconUrl}" id="iconPreviewDuck" style="width:40px;height:40px;border-radius:8px;background:#222;object-fit:contain;">
-                                <span style="margin-left:10px;color:#fff;">DuckDuckGo</span>
-                                <span id="checkDuck" style="position:absolute;top:4px;right:4px;${selectedIconType==='duck'?'display:block':'display:none'};color:#4af;font-size:1.3em;">&#10003;</span>
+                                <span style="margin-left:16px;color:#fff;font-size:1.05em;">DuckDuckGo</span>
+                                <span id="checkDuck" style="position:absolute;top:6px;right:10px;${selectedIconType==='duck'?'display:block':'display:none'};">
+                                    <svg width="22" height="22" viewBox="0 0 24 24"><polyline points="5,13 10,18 19,7" style="fill:none;stroke:#1ec94c;stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                                </span>
                             </div>
                         </div>
-                        <div style="margin-top:16px;">
-                            <label style="color:#fff;">Custom Icon URL</label>
-                            <div style="display:flex;align-items:center;gap:12px;">
-                                <input type="url" id="customIconInput" value="${selectedCustomUrl||''}" placeholder="https://example.com/icon.png" style="width:70%;padding:6px;border-radius:6px;border:none;background:#333;color:#fff;">
-                                <div id="iconChoiceCustom" style="position:relative;cursor:pointer;border-radius:10px;padding:4px 8px;display:flex;align-items:center;box-shadow:0 1px 4px #0004;background:${selectedIconType==='custom'?'#333':'#222'};border:${selectedIconType==='custom'?'2px solid #4af':'2px solid transparent'};">
-                                    <span id="customIconPreview" style="display:inline-block;width:40px;height:40px;border-radius:8px;background:#222;overflow:hidden;line-height:40px;text-align:center;font-size:2em;color:#a00;">
-                                        ${iconError ? '🚫' : (selectedCustomUrl ? `<img src="${selectedCustomUrl}" style="width:40px;height:40px;object-fit:contain;border-radius:8px;" onerror="this.parentNode.innerHTML='🚫';">` : '')}
-                                    </span>
-                                    <span style="margin-left:10px;color:#fff;">Custom</span>
-                                    <span id="checkCustom" style="position:absolute;top:4px;right:4px;${selectedIconType==='custom'?'display:block':'display:none'};color:#4af;font-size:1.3em;">&#10003;</span>
-                                </div>
+                        <div style="display:flex;flex-direction:column;align-items:center;">
+                            <label style="color:#fff;font-weight:bold;text-align:center;margin-bottom:6px;font-size:1.05em;">Custom Icon</label>
+                            <input type="url" id="customIconInput" value="${selectedCustomUrl||''}" placeholder="https://domain.com/icon.ext" style="width:80%;max-width:320px;padding:8px 10px;border-radius:8px;border:none;background:#333;color:#fff;text-align:center;margin-bottom:10px;font-size:1em;">
+                            <div id="iconChoiceCustom" style="position:relative;cursor:pointer;border-radius:12px;padding:0;display:flex;align-items:center;justify-content:center;box-shadow:0 1px 4px #0004;background:${selectedIconType==='custom'?'#333':'#222'};border:${selectedIconType==='custom'?'2.5px solid #4af':'2px solid transparent'};width:54px;height:54px;margin-bottom:0;">
+                                <span id="customIconPreview" style="display:inline-block;width:40px;height:40px;border-radius:8px;background:#222;overflow:hidden;line-height:40px;text-align:center;font-size:2em;color:#a00;">
+                                    ${iconError ? '🚫' : (selectedCustomUrl ? `<img src="${selectedCustomUrl}" style="width:40px;height:40px;object-fit:contain;border-radius:8px;" onerror="this.parentNode.innerHTML='🚫';">` : '')}
+                                </span>
+                                <span id="checkCustom" style="position:absolute;top:2px;right:2px;${selectedIconType==='custom'?'display:block':'display:none'};">
+                                    <svg width="18" height="18" viewBox="0 0 24 24"><polyline points="5,13 10,18 19,7" style="fill:none;stroke:#1ec94c;stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                                </span>
                             </div>
                         </div>
-                    </div>
+                    </fieldset>
                 `;
             }
 
@@ -746,8 +750,20 @@
                 }
 
                 function rerenderIconSelector() {
+                    // Save focus if custom input is focused
+                    const active = document.activeElement;
+                    const isCustomInput = active && active.id === 'customIconInput';
+                    const caret = isCustomInput ? active.selectionStart : null;
                     document.getElementById('iconSelectorContainer').innerHTML = renderIconSelector();
                     attachIconSelectorEvents();
+                    // Restore focus and caret
+                    if (isCustomInput) {
+                        const input = document.getElementById('customIconInput');
+                        if (input) {
+                            input.focus();
+                            if (caret !== null) input.setSelectionRange(caret, caret);
+                        }
+                    }
                 }
 
                 function attachIconSelectorEvents() {
@@ -778,7 +794,8 @@
                     // Custom input
                     const customInput = document.getElementById('customIconInput');
                     if (customInput) {
-                        customInput.oninput = () => {
+                        customInput.oninput = (e) => {
+                            const pos = customInput.selectionStart;
                             selectedCustomUrl = customInput.value.trim();
                             iconError = false;
                             if (selectedCustomUrl) {
@@ -796,6 +813,11 @@
                             } else {
                                 rerenderIconSelector();
                             }
+                            // Restore caret position after rerender
+                            setTimeout(() => {
+                                customInput.focus();
+                                if (typeof pos === 'number') customInput.setSelectionRange(pos, pos);
+                            }, 0);
                         };
                     }
                 }
