--- a/newtab.html
+++ b/newtab.html
@@ -623,11 +623,28 @@
 
         // --- Modal Logic ---
         function openEditModal(index, site) {
+            // Determine which icon type was previously selected
+            let selectedIconType = 'duck';
+            let selectedCustomUrl = '';
+            let hostname = '';
+            try { hostname = new URL(site.url).hostname; } catch {}
+            const googleIconUrl = hostname ? `http://www.google.com/s2/favicons?domain=${hostname}&sz=64` : '';
+            const duckIconUrl = hostname ? `https://icons.duckduckgo.com/ip3/${hostname}.ico` : '';
+            if (site.favicon === googleIconUrl) {
+                selectedIconType = 'google';
+            } else if (site.favicon === duckIconUrl) {
+                selectedIconType = 'duck';
+            } else if (site.favicon && site.favicon !== '') {
+                selectedIconType = 'custom';
+                selectedCustomUrl = site.favicon;
+            }
             showModal({
                 title: 'Edit Favorite',
                 name: site.name,
                 url: site.url,
                 showIconSelector: true,
+                selectedIconType,
+                selectedCustomUrl,
                 onSave: async (name, url, favicon) => {
                     const sites = loadSites();
                     sites[index].name = name;
@@ -646,11 +663,14 @@
         }
 
         function openAddModal() {
+            // For new favorite, nothing is selected
             showModal({
                 title: 'Add Favorite',
                 name: '',
                 url: '',
                 showIconSelector: true,
+                selectedIconType: null,
+                selectedCustomUrl: '',
                 onSave: async (name, url, favicon) => {
                     url = prependHttpSchemeIfNeeded(url);
                     if (!name) name = url;
@@ -663,7 +683,7 @@
             });
         }
 
-        function showModal({ title, name, url, onSave, onDelete, showIconSelector }) {
+        function showModal({ title, name, url, onSave, onDelete, showIconSelector, selectedIconType, selectedCustomUrl }) {
             const modalRoot = document.getElementById('modalRoot');
             // --- Icon selection state ---
             let currentUrl = url || '';
@@ -672,15 +692,17 @@
             let googleIconUrl = hostname ? `http://www.google.com/s2/favicons?domain=${hostname}&sz=64` : '';
             let duckIconUrl = hostname ? `https://icons.duckduckgo.com/ip3/${hostname}.ico` : '';
             let customIconUrl = '';
-            let selectedIconType = 'duck'; // default
-            let selectedCustomUrl = '';
             let iconError = false;
 
+            // Use passed-in selectedIconType/customUrl if present
+            let _selectedIconType = typeof selectedIconType === 'string' ? selectedIconType : null;
+            let _selectedCustomUrl = typeof selectedCustomUrl === 'string' ? selectedCustomUrl : '';
+
             function getSelectedFavicon() {
-                if (selectedIconType === 'google') return googleIconUrl;
-                if (selectedIconType === 'duck') return duckIconUrl;
-                if (selectedIconType === 'custom') return selectedCustomUrl;
-                return duckIconUrl;
+                if (_selectedIconType === 'google') return googleIconUrl;
+                if (_selectedIconType === 'duck') return duckIconUrl;
+                if (_selectedIconType === 'custom') return _selectedCustomUrl;
+                return '';
             }
 
             function renderIconSelector() {
@@ -692,34 +714,33 @@
                     return `<img src="${src}" id="${id}" style="width:40px;height:40px;border-radius:8px;background:#222;object-fit:contain;" onerror="this.style.display='none';document.getElementById('${id}Fallback').style.display='inline-block';">
                             <span style="display:none;width:40px;height:40px;line-height:40px;text-align:center;font-size:2em;color:#888;" id="${id}Fallback">❔</span>`;
                 }
-                // --- Icon selector layout and style ---
                 return `
                     <fieldset id="iconSelectorFieldset" style="margin-bottom:18px;border:2px solid #444;border-radius:16px;padding:18px 18px 18px 18px;position:relative;">
                         <legend style="padding:0 12px;font-size:1.1em;color:#aaa;font-weight:bold;background:#222;left:12px;">Icon</legend>
                         <div style="display:flex;justify-content:center;gap:32px;margin-bottom:18px;">
-                            <div class="icon-choice" id="iconChoiceGoogle" style="position:relative;cursor:pointer;border-radius:12px;padding:14px 32px 14px 20px;display:flex;align-items:center;box-shadow:0 1px 4px #0004;background:${selectedIconType==='google'?'#333':'#222'};border:${selectedIconType==='google'?'2.5px solid #4af':'2px solid transparent'};min-width:120px;">
+                            <div class="icon-choice" id="iconChoiceGoogle" style="position:relative;cursor:pointer;border-radius:12px;padding:14px 32px 14px 20px;display:flex;align-items:center;box-shadow:0 1px 4px #0004;background:${_selectedIconType==='google'?'#333':'#222'};border:${_selectedIconType==='google'?'2.5px solid #4af':'2px solid transparent'};min-width:120px;">
                                 ${iconImgOrUnknown(googleIconUrl, "iconPreviewGoogle")}
                                 <span style="margin-left:16px;color:#fff;font-size:1.05em;">Google</span>
-                                <span id="checkGoogle" style="position:absolute;top:6px;right:10px;${selectedIconType==='google'?'display:block':'display:none'};">
+                                <span id="checkGoogle" style="position:absolute;top:6px;right:10px;${_selectedIconType==='google'?'display:block':'display:none'};">
                                     <svg width="22" height="22" viewBox="0 0 24 24"><polyline points="5,13 10,18 19,7" style="fill:none;stroke:#1ec94c;stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
                                 </span>
                             </div>
-                            <div class="icon-choice" id="iconChoiceDuck" style="position:relative;cursor:pointer;border-radius:12px;padding:14px 32px 14px 20px;display:flex;align-items:center;box-shadow:0 1px 4px #0004;background:${selectedIconType==='duck'?'#333':'#222'};border:${selectedIconType==='duck'?'2.5px solid #4af':'2px solid transparent'};min-width:120px;">
+                            <div class="icon-choice" id="iconChoiceDuck" style="position:relative;cursor:pointer;border-radius:12px;padding:14px 32px 14px 20px;display:flex;align-items:center;box-shadow:0 1px 4px #0004;background:${_selectedIconType==='duck'?'#333':'#222'};border:${_selectedIconType==='duck'?'2.5px solid #4af':'2px solid transparent'};min-width:120px;">
                                 ${iconImgOrUnknown(duckIconUrl, "iconPreviewDuck")}
                                 <span style="margin-left:16px;color:#fff;font-size:1.05em;">DuckDuckGo</span>
-                                <span id="checkDuck" style="position:absolute;top:6px;right:10px;${selectedIconType==='duck'?'display:block':'display:none'};">
+                                <span id="checkDuck" style="position:absolute;top:6px;right:10px;${_selectedIconType==='duck'?'display:block':'display:none'};">
                                     <svg width="22" height="22" viewBox="0 0 24 24"><polyline points="5,13 10,18 19,7" style="fill:none;stroke:#1ec94c;stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
                                 </span>
                             </div>
                         </div>
                         <div style="display:flex;flex-direction:column;align-items:center;">
                             <label style="color:#fff;font-weight:bold;text-align:center;margin-bottom:6px;font-size:1.05em;">Custom Icon</label>
-                            <input type="url" id="customIconInput" value="${selectedCustomUrl||''}" placeholder="https://domain.com/icon.ext" style="width:80%;max-width:320px;padding:8px 10px;border-radius:8px;border:none;background:#333;color:#fff;text-align:center;margin-bottom:10px;font-size:1em;">
-                            <div id="iconChoiceCustom" style="position:relative;cursor:pointer;border-radius:12px;padding:0;display:flex;align-items:center;justify-content:center;box-shadow:0 1px 4px #0004;background:${selectedIconType==='custom'?'#333':'#222'};border:${selectedIconType==='custom'?'2.5px solid #4af':'2px solid transparent'};width:54px;height:54px;margin-bottom:0;">
+                            <input type="url" id="customIconInput" value="${_selectedCustomUrl||''}" placeholder="https://domain.com/icon.ext" style="width:80%;max-width:320px;padding:8px 10px;border-radius:8px;border:none;background:#333;color:#fff;text-align:center;margin-bottom:10px;font-size:1em;">
+                            <div id="iconChoiceCustom" style="position:relative;cursor:pointer;border-radius:12px;padding:0;display:flex;align-items:center;justify-content:center;box-shadow:0 1px 4px #0004;background:${_selectedIconType==='custom'?'#333':'#222'};border:${_selectedIconType==='custom'?'2.5px solid #4af':'2px solid transparent'};width:54px;height:54px;margin-bottom:0;">
                                 <span id="customIconPreview" style="display:inline-block;width:40px;height:40px;border-radius:8px;background:#222;overflow:hidden;line-height:40px;text-align:center;font-size:2em;color:#a00;">
-                                    ${iconError ? '🚫' : (selectedCustomUrl ? `<img src="${selectedCustomUrl}" style="width:40px;height:40px;object-fit:contain;border-radius:8px;" onerror="this.parentNode.innerHTML='🚫';">` : '')}
+                                    ${iconError ? '🚫' : (_selectedCustomUrl ? `<img src="${_selectedCustomUrl}" style="width:40px;height:40px;object-fit:contain;border-radius:8px;" onerror="this.parentNode.innerHTML='🚫';">` : '')}
                                 </span>
-                                <span id="checkCustom" style="position:absolute;top:2px;right:2px;${selectedIconType==='custom'?'display:block':'display:none'};">
+                                <span id="checkCustom" style="position:absolute;top:2px;right:2px;${_selectedIconType==='custom'?'display:block':'display:none'};">
                                     <svg width="18" height="18" viewBox="0 0 24 24"><polyline points="5,13 10,18 19,7" style="fill:none;stroke:#1ec94c;stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
                                 </span>
                             </div>
@@ -774,7 +795,6 @@
                     const caret = isCustomInput ? active.selectionStart : null;
                     document.getElementById('iconSelectorContainer').innerHTML = renderIconSelector();
                     attachIconSelectorEvents();
-                    // Restore focus and caret
                     if (isCustomInput) {
                         const input = document.getElementById('customIconInput');
                         if (input) {
@@ -789,7 +809,7 @@
                     const googleDiv = document.getElementById('iconChoiceGoogle');
                     if (googleDiv) {
                         googleDiv.onclick = () => {
-                            selectedIconType = 'google';
+                            _selectedIconType = 'google';
                             rerenderIconSelector();
                         };
                     }
@@ -797,7 +817,7 @@
                     const duckDiv = document.getElementById('iconChoiceDuck');
                     if (duckDiv) {
                         duckDiv.onclick = () => {
-                            selectedIconType = 'duck';
+                            _selectedIconType = 'duck';
                             rerenderIconSelector();
                         };
                     }
@@ -805,7 +825,7 @@
                     const customDiv = document.getElementById('iconChoiceCustom');
                     if (customDiv) {
                         customDiv.onclick = () => {
-                            selectedIconType = 'custom';
+                            _selectedIconType = 'custom';
                             rerenderIconSelector();
                         };
                     }
@@ -814,10 +834,9 @@
                     if (customInput) {
                         customInput.oninput = (e) => {
                             const pos = customInput.selectionStart;
-                            selectedCustomUrl = customInput.value.trim();
+                            _selectedCustomUrl = customInput.value.trim();
                             iconError = false;
-                            if (selectedCustomUrl) {
-                                // Check if image loads
+                            if (_selectedCustomUrl) {
                                 const img = new window.Image();
                                 img.onload = () => {
                                     iconError = false;
@@ -827,11 +846,10 @@
                                     iconError = true;
                                     rerenderIconSelector();
                                 };
-                                img.src = selectedCustomUrl;
+                                img.src = _selectedCustomUrl;
                             } else {
                                 rerenderIconSelector();
                             }
-                            // Restore caret position after rerender
                             setTimeout(() => {
                                 customInput.focus();
                                 if (typeof pos === 'number') customInput.setSelectionRange(pos, pos);
@@ -842,10 +860,8 @@
 
                 // Update icons when URL changes
                 document.getElementById('modalUrl').addEventListener('input', debounce(() => {
-                        updateIconUrls();
-                        if (selectedIconType === 'google' || selectedIconType === 'duck') {
-                            rerenderIconSelector();
-                        }
+                    updateIconUrls();
+                    rerenderIconSelector(); // Always rerender so icons update as you type
                 }, 400));
 
                 attachIconSelectorEvents();
