--- a/newtab.html
+++ b/newtab.html
@@ -361,12 +361,21 @@
 
         function renderNews() {
             const newsSection = document.getElementById('newsSection');
-            // Add refresh icon after "Top News"
+            // Add refresh icon and gear icon after "Top News"
             newsSection.innerHTML = `
-                <div style="margin-top:48px;color:#fff;font-size:1.3em;font-weight:bold;display:flex;align-items:center;gap:12px;">
+                <div style="margin-top:48px;color:#fff;font-size:1.3em;font-weight:bold;display:flex;align-items:center;gap:12px;position:relative;">
                     Top News
                     <span id="newsRefreshIcon" style="cursor:pointer;display:inline-flex;align-items:center;">
                         <svg id="newsRefreshSvg" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="gray"><path d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6s-2.69 6-6 6-6-2.69-6-6H4c0 4.42 3.58 8 8 8s8-3.58 8-8-3.58-8-8-8z"/></svg>
+                    </span>
+                    <span id="newsSettingsIcon" title="Manage News API Key" style="cursor:pointer;display:inline-flex;align-items:center;margin-left:auto;">
+                        <svg width="22" height="22" viewBox="0, 0, 300, 300" xmlns="http://www.w3.org/2000/svg">
+                            <g>
+                                <title>Gear Icon</title>
+                                <circle stroke="gray" stroke-width="60" stroke-dasharray="53.86,53.86" fill="none" cx="150" cy="150" r="120"/>
+                                <circle stroke="gray" stroke-width="60"                                fill="none" cx="150" cy="150" r="90"/>
+                            </g>
+                        </svg>
                     </span>
                 </div>
             `;
@@ -374,6 +383,14 @@
             const refreshIcon = document.getElementById('newsRefreshIcon');
             const refreshSvg = document.getElementById('newsRefreshSvg');
             let isFetching = false;
+
+            // Add gear icon click handler
+            const settingsIcon = document.getElementById('newsSettingsIcon');
+            if (settingsIcon) {
+                settingsIcon.onclick = () => {
+                    openApiKeyModal();
+                };
+            }
 
             refreshIcon.onclick = () => {
                 localStorage.removeItem(NEWS_STORAGE_KEY);
